tests/snapshots/run_wpt_conformance__coreml_reduceMax_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_max.https.any.js",
    "reduceMax float32 5D tensor default options",
    "coreml",
    "PASS",
)
